Setup skeleton for the authentication

--- a/Source/CinemaManger.Contracts/CinemaManger.Contracts.csproj
+++ b/Source/CinemaManger.Contracts/CinemaManger.Contracts.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\CinemaManager.Domain\CinemaManager.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
