--- a/Source/CinemaManager.Infrastructure/CinemaManager.Infrastructure.csproj
+++ b/Source/CinemaManager.Infrastructure/CinemaManager.Infrastructure.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\CinemaManager.Application\CinemaManager.Application.csproj" />
+  </ItemGroup>
+
 </Project>
