Implement Jwt token generation

--- a/Source/CinemaManager.API/appsettings.Development.json
+++ b/Source/CinemaManager.API/appsettings.Development.json
@@ -4,5 +4,11 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "JwtSettings": {
+    "Issuer": "CinemaManager",
+    "Audience": "CinemaManager",
+    "ExpiryMinutes": "60",
+    "Key": "super-secret-keysuper-secret-key"
   }
 }
