--- a/Source/CinemaManager.Infrastructure/CinemaManager.Infrastructure.csproj
+++ b/Source/CinemaManager.Infrastructure/CinemaManager.Infrastructure.csproj
@@ -7,6 +7,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.14" />
+    <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="8.6.1" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\CinemaManager.Application\CinemaManager.Application.csproj" />
   </ItemGroup>
 
